--- a/policy-management-app/src/app/login/login.component.html
+++ b/policy-management-app/src/app/login/login.component.html
@@ -1,4 +1,4 @@
-<H1>Login!</H1>
+<H1>Login</H1>
 
 <div class="container">
   <div class="alert alert-danger" *ngIf='invalidLogin'>{{errorMessage}}</div>
