--- a/policy-management-app/src/app/policy/policy.component.html
+++ b/policy-management-app/src/app/policy/policy.component.html
@@ -38,6 +38,7 @@
         class="form-control"
         name="premiumAmount"
         required="required"
+		pattern="\d*"
       />
     </fieldset>
 
